# pf-simulation-modeler

./: .codespellrc  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  DEVELOPMENT.md  MANIFEST.in  README.md  README.rst  build.sh  pv_run.py  setup.cfg
.github/workflows/: test_and_release.yml
bundles/desktop/macOS/: setup.py
bundles/desktop/windows/: README.md  create_exe.bat  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
data/database/: .gitignore
data/output/: .gitignore
docs/: engine.md  server.md  snippets.md  ui.md
examples/jupyter/: show.ipynb
pf_modeler/app/: controller.py  main.py
pf_modeler/app/engine/: __init__.py  cli.py  files.py  output.py  simput.py  singleton.py
pf_modeler/app/engine/io/: __init__.py
pf_modeler/app/engine/model/: grid_ui.xml  model.yaml  soil.yaml
pf_modeler/app/engine/visualizations/: base.py  colors.py  elevation.py  image.py  soil.py
pf_modeler/app/ui/: __init__.py  boundary_conditions.py  domain.py  output.py  timing.py
pf_modeler/html/: __init__.py
pf_modeler/html/module/: .gitignore  __init__.py
pf_modeler/html/module/serve/: vue-pf_modeler.umd.min.js
pf_sim_2/app/: engine.py  main.py  ui.py
pf_sim_2/app/definitions/: boundary_ui.xml
pf_sim_2/app/engine/: boundary_conditions.py  domain.py  engine.py  files.py  save_project.py  solver.py  timing.py
pf_sim_2/app/engine/model/: boundary.yaml  domain.yaml  domain_ui.xml  grid.yaml  (+3 more)
pf_sim_2/app/ui/: __init__.py  boundary_conditions.py  domain.py  save_project.py  simulation_type.py  snippet.py  solver.py  subsurface_props.py  timing.py  ui.py
pf_sim_2/app/ui_elements/: __init__.py  boundary_conditions.py  domain.py
pf_sim_2/module/serve/: vue-pf_sim_2.umd.min.js
pf_sim_2/widgets/: pf_sim_2.py
pf_simulation_modeler/app/: jupyter.py  main.py
pf_simulation_modeler/app/engine/: domain.py
pf_simulation_modeler/app/ui/: file_db.py  simulation_type.py
scripts/parflow/: generate_model.py  read_run.py
tests/: test_import.py
vue-components/: package-lock.json  package.json  vue.config.js
vue-components/src/components/: index.js
(+29 files in other folders)
