[metadata]
name = pf-simulation-modeler
version = 1.0.0
description = Simulation modeler for ParFlow
long_description = file: README.rst
author = Kitware Inc.
license = BSD license
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: BSD license
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    ParFlow
    Simulation
    Modeler

[options]
packages = find:
include_package_data = True
install_requires =
    trame<3
    simput==2.0.2
    pftools[all]==1.2.0 # This may trigger some issue on Mac M1

[options.entry_points]
console_scripts =
    pf-simulation-modeler = pf_modeler:main
